Bug 1125084 - Uninitialised value use in mozilla::hal_impl::SetScreenBrightness(double).  r=dhylands.